--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.kodelabs.boilerplate"
+<manifest
+    package="com.kodelabs.boilerplate"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name="com.kodelabs.boilerplate.AndroidApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
