--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-=======
+# [Android] ========================
 # Built application files
 *.apk
 *.ap_
@@ -24,6 +16,8 @@ gen/
 # Gradle files
 .gradle/
 build/
+/*/build/
+.gradletasknamecache
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -34,8 +28,58 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
 
-# Android Studio captures folder
-captures/
+## Directory-based project format:
+.idea/
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+
+
+# [Maven] ========================
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+
+# [Gradle-Android] ========================
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Properties
+gradle.properties
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Misc
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/captures
+**/*.iml
